 - #69 impl for service : GET /referral/applications/{referralId}
 - #68 impl for service : POST /referral/apply
 - #75 add 'x-user-id' header to server response
 - #67 impl for service : GET /referral/referrals
 - #70 impl for service : PUT /referral/invalidate
 - #66 impl for service : POST /referral/add
 - #62 impl for service : PUT /job/invalidate
 - #52 impl for service : GET /job/jobs
 - #61 impl for service : POST /job/add
 - update postman collection
 - #59 fix NPE when no RQ body, /recruitment/info/entries
 - #51 add 'userVote' field to wiki info items, GET /recruitment/info/entries
 - #56 add 'X-HTTP-Method-Override' header support
 - #53 change Google API Client IDs
 - fix sonar issues
 - #6 fix postman collection
 - #47 add heroku 'Procfile'
 - #47 delete 'mvnw' and 'mvnw.cmd'
 - #47 add maven version to system.properties
 - #47 create 'system.properties' for heroku purposes
 - #47 specify java version for maven compiler plugin
 - #6 update project installation guide
 - #6 add initial postman collection and environment
 - #4 create project installation guide
 - #36 impl for service : POST register/company/add
 - #38 serialize value objects to JSON as values
 - #40 assign default privilege set to newly registered user
 - #30 add SQL impl for service : POST wiki/recruitment/info/entries
 - #30 add API and mock for service : POST wiki/recruitment/info/entries
 - #32 impl for service : POST wiki/recruitment/info/vote
 - #31 impl for service : POST wiki/recruitment/info/invalidate
 - #29 impl for service : POST wiki/recruitment/info/add
 - #27 impl for service : POST register/company/companies
 - #23 impl for service : POST auth/privileges/remove
 - #23 impl for service : POST auth/privileges/add
 - #23 impl for service : GET auth/privileges/{userId}
 - #19 impl user repository
 - #19 rename core module folder
 - #19 impl sign in with google (OAuth 2.0 Bearer Token), secure APIs
 - #16 impl for service : POST register/company/invalidate